force-app/main/default/objects/Milestone_Batch_Generation__c/Milestone_Batch_Generation__c.object-meta.xml
<CustomObject>
    <description>Records created are used to automatically generate Milestones for a Project based on Opportunity Products</description>
    <label>Milestone Batch Generation</label>
    <nameField>
        <displayFormat>MBG-{0000}</displayFormat>
        <label>Batch Generation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Batch Generations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>