force-app/main/default/objects/Milestone_Batch_Generation__c/fields/First_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Milestone_Date__c</fullName>
    <description>The Target Date for the first Milestone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Target Date for the first Milestone</inlineHelpText>
    <label>First Milestone Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>