force-app/main/default/objects/Milestone_Batch_Generation__c/fields/Product_Package__c.field-meta.xml
<CustomField>
    <fullName>Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Package used to generate Milestones for the Project</description>
    <inlineHelpText>The Product Package used to generate Milestones for the Project</inlineHelpText>
    <label>Product Package</label>
    <referenceTo>PSA_Product_Package__c</referenceTo>
    <relationshipLabel>Milestone Batch Generations</relationshipLabel>
    <relationshipName>Milestone_Batch_Generations</relationshipName>
    <type>Lookup</type>
</CustomField>