force-app/main/default/objects/Milestone_Batch_Generation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Generated Milestone Batches</relationshipLabel>
    <relationshipName>Milestone_Batch_Generations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>