force-app/main/default/objects/Milestone_Batch_Generation__c/fields/Total_Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Package_Amount__c</fullName>
    <description>The total amount of all the Milestones generated.  It will be divided up among the milestones based on Milestone Percent supplied in Product Package Milestone definition.</description>
    <inlineHelpText>The total amount of all the Milestones generated.  It will be divided up among the milestones based on Milestone Percent supplied in Product Package Milestone definition.</inlineHelpText>
    <label>Total Package Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>